@@ -303,25 +303,25 @@ class GriffithSQL:
 		if config.get('type', section='database') == 'sqlite':
 			url = "sqlite:///%s" % os.path.join(griffith_dir, config.get('file', 'griffith.db', section='database'))
 		elif config.get('type', section='database') == 'postgres':
-			if config.get('db_port', 0, section='database')==0:
+			if config.get('port', 0, section='database')==0:
 				config.set('port', 5432, section='database')
 			url = "postgres://%s:%s@%s:%d/%s" % (
-				config.get('db_user', section='database'),
-				config.get('db_passwd', section='database'),
-				config.get('db_host', section='database'),
-				int(config.get('db_port', section='database')),
-				config.get('db_name', section='database'))
+				config.get('user', section='database'),
+				config.get('passwd', section='database'),
+				config.get('host', section='database'),
+				int(config.get('port', section='database')),
+				config.get('name', section='database'))
 		elif config.get('type', section='database') == 'mysql':
-			if config.get('db_port', 0, section='database')==0:
+			if config.get('port', 0, section='database')==0:
 				config.set('port', 3306, section='database')
 			url = "mysql://%s:%s@%s:%d/%s" % (
-				config.get('db_user', section='database'),
-				config.get('db_passwd', section='database'),
-				config.get('db_host', section='database'),
-				int(config.get('db_port', section='database')),
-				config.get('db_name', section='database'))
+				config.get('user', section='database'),
+				config.get('passwd', section='database'),
+				config.get('host', section='database'),
+				int(config.get('port', section='database')),
+				config.get('name', section='database'))
 		elif config.get('type', section='database') == 'mssql':
-			if config.get('db_port', 0, section='database')==0:
+			if config.get('port', 0, section='database')==0:
 				config.set('port', 1433, section='database')
 			# use_scope_identity=0 have to be set as workaround for a sqlalchemy bug
 			# but it is not guaranteed that the right identity value will be selected
@@ -332,11 +332,11 @@ class GriffithSQL:
 			# (one statement !) After preparing and executing there should be a fetch
 			# If it is executed as two separate statements the scope is lost after insert.
 			url = "mssql://%s:%s@%s:%d/%s?use_scope_identity=0" % (
-				config.get('db_user', section='database'),
-				config.get('db_passwd', section='database'),
-				config.get('db_host', section='database'),
-				int(config.get('db_port', section='database')),
-				config.get('db_name', section='database'))
+				config.get('user', section='database'),
+				config.get('passwd', section='database'),
+				config.get('host', section='database'),
+				int(config.get('port', section='database')),
+				config.get('name', section='database'))
 		else:
 			config.set('type', 'sqlite', section='database')
 			url = "sqlite:///%s" % os.path.join(griffith_dir, config.get('file', 'griffith.db', section='database'))
