@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-07-01  Piotr Ożarowski
+	* Fix db config data (thanks Michael)
+
 ---- 0.9.3 ---
 
 2007-06-30  Piotr Ożarowski
